// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deprecation generates nexus DSL with native protobuf js_out 1`] = `
"// Code generated by protoc-gen-nexus. DO NOT EDIT.
// source: deprecation/deprecation.proto

import { objectType, inputObjectType, enumType, unionType, nullable, nonNull } from \\"nexus\\";
import * as _$deprecation$deprecation_pb from \\"./deprecation/deprecation_pb\\";
export type _$deprecation$deprecation_pb$DeprecatedMessage = _$deprecation$deprecation_pb.DeprecatedMessage;
export type _$deprecation$deprecation_pb$NotDeprecatedMessage = _$deprecation$deprecation_pb.NotDeprecatedMessage;
export type _$deprecation$deprecation_pb$DeprecatedMessageInnerMessage = _$deprecation$deprecation_pb.DeprecatedMessage.InnerMessage;
export type _$deprecation$deprecation_pb$NotDeprecatedMessageInnerMessage1 = _$deprecation$deprecation_pb.NotDeprecatedMessage.InnerMessage1;
export type _$deprecation$deprecation_pb$NotDeprecatedMessageInnerMessage2 = _$deprecation$deprecation_pb.NotDeprecatedMessage.InnerMessage2;
export const NotDeprecatedMessageNotDeprecatedOneof = unionType({
    name: \\"NotDeprecatedMessageNotDeprecatedOneof\\",
    description: \\"\\",
    definition(t) {
        t.members(\\"NotDeprecatedMessageInnerMessage1\\", \\"NotDeprecatedMessageInnerMessage2\\");
    },
    resolveType(item) {
        if (item instanceof _$deprecation$deprecation_pb.NotDeprecatedMessage.InnerMessage1) {
            return \\"NotDeprecatedMessageInnerMessage1\\";
        }
        if (item instanceof _$deprecation$deprecation_pb.NotDeprecatedMessage.InnerMessage2) {
            return \\"NotDeprecatedMessageInnerMessage2\\";
        }
        throw \\"unreachable\\";
    }
});
export const NotDeprecatedMessageDeprecatedOneof = unionType({
    name: \\"NotDeprecatedMessageDeprecatedOneof\\",
    description: \\"\\",
    definition(t) {
        t.members(\\"NotDeprecatedMessageInnerMessage1\\", \\"NotDeprecatedMessageInnerMessage2\\");
    },
    resolveType(item) {
        if (item instanceof _$deprecation$deprecation_pb.NotDeprecatedMessage.InnerMessage1) {
            return \\"NotDeprecatedMessageInnerMessage1\\";
        }
        if (item instanceof _$deprecation$deprecation_pb.NotDeprecatedMessage.InnerMessage2) {
            return \\"NotDeprecatedMessageInnerMessage2\\";
        }
        throw \\"unreachable\\";
    }
});
export const DeprecatedMessage = objectType({
    name: \\"DeprecatedMessage\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            deprecation: \\"testapi.deprecation.DeprecatedMessage is mark as deprecated in a *.proto file.\\",
            resolve(root) { return root.getBody(); }
        });
        t.field(\\"enum\\", {
            type: nullable(\\"NotDeprecatedEnum\\"),
            description: \\"\\",
            deprecation: \\"testapi.deprecation.DeprecatedMessage is mark as deprecated in a *.proto file.\\",
            resolve(root) { return root.getEnum(); }
        });
    },
    sourceType: { module: __filename, export: \\"_$deprecation$deprecation_pb$DeprecatedMessage\\" }
});
export const NotDeprecatedMessage = objectType({
    name: \\"NotDeprecatedMessage\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            deprecation: \\"testapi.deprecation.NotDeprecatedMessage.body is mark as deprecated in a *.proto file.\\",
            resolve(root) { return root.getBody(); }
        });
        t.field(\\"enum\\", {
            type: nullable(\\"DeprecatedEnum\\"),
            description: \\"\\",
            deprecation: \\"testapi.deprecation.DeprecatedEnum is mark as deprecated in a *.proto file.\\",
            resolve(root) { return root.getEnum(); }
        });
        t.field(\\"not_deprecated_oneof\\", {
            type: nullable(\\"NotDeprecatedMessageNotDeprecatedOneof\\"),
            description: \\"\\",
            resolve(root) {
                switch (root.getNotDeprecatedOneofCase()) {
                    case _$deprecation$deprecation_pb.NotDeprecatedMessage.NotDeprecatedOneofCase.NOT_DEPRECATED_ONEOF_NOT_SET: {
                        return null;
                    }
                    case _$deprecation$deprecation_pb.NotDeprecatedMessage.NotDeprecatedOneofCase.MSG1: {
                        return root.getMsg1()!;
                    }
                    case _$deprecation$deprecation_pb.NotDeprecatedMessage.NotDeprecatedOneofCase.MSG2: {
                        return root.getMsg2()!;
                    }
                    default: {
                        throw \\"unreachable\\";
                    }
                }
            }
        });
        t.field(\\"deprecated_oneof\\", {
            type: nullable(\\"NotDeprecatedMessageDeprecatedOneof\\"),
            description: \\"\\",
            deprecation: \\"testapi.deprecation.NotDeprecatedMessage.deprecated_oneof is mark as deprecated in a *.proto file.\\",
            resolve(root) {
                switch (root.getDeprecatedOneofCase()) {
                    case _$deprecation$deprecation_pb.NotDeprecatedMessage.DeprecatedOneofCase.DEPRECATED_ONEOF_NOT_SET: {
                        return null;
                    }
                    case _$deprecation$deprecation_pb.NotDeprecatedMessage.DeprecatedOneofCase.MSG3: {
                        return root.getMsg3()!;
                    }
                    case _$deprecation$deprecation_pb.NotDeprecatedMessage.DeprecatedOneofCase.MSG4: {
                        return root.getMsg4()!;
                    }
                    default: {
                        throw \\"unreachable\\";
                    }
                }
            }
        });
    },
    sourceType: { module: __filename, export: \\"_$deprecation$deprecation_pb$NotDeprecatedMessage\\" }
});
export const DeprecatedMessageInnerMessage = objectType({
    name: \\"DeprecatedMessageInnerMessage\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            deprecation: \\"testapi.deprecation.DeprecatedMessage is mark as deprecated in a *.proto file.\\",
            resolve(root) { return root.getBody(); }
        });
    },
    sourceType: { module: __filename, export: \\"_$deprecation$deprecation_pb$DeprecatedMessageInnerMessage\\" }
});
export const NotDeprecatedMessageInnerMessage1 = objectType({
    name: \\"NotDeprecatedMessageInnerMessage1\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            resolve(root) { return root.getBody(); }
        });
    },
    sourceType: { module: __filename, export: \\"_$deprecation$deprecation_pb$NotDeprecatedMessageInnerMessage1\\" }
});
export const NotDeprecatedMessageInnerMessage2 = objectType({
    name: \\"NotDeprecatedMessageInnerMessage2\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            resolve(root) { return root.getBody(); }
        });
    },
    sourceType: { module: __filename, export: \\"_$deprecation$deprecation_pb$NotDeprecatedMessageInnerMessage2\\" }
});
export const DeprecatedMessageInput = inputObjectType({
    name: \\"DeprecatedMessageInput\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            deprecation: \\"testapi.deprecation.DeprecatedMessage is mark as deprecated in a *.proto file.\\"
        });
        t.field(\\"enum\\", {
            type: nullable(\\"NotDeprecatedEnum\\"),
            description: \\"\\",
            deprecation: \\"testapi.deprecation.DeprecatedMessage is mark as deprecated in a *.proto file.\\"
        });
    }
});
export const NotDeprecatedMessageInput = inputObjectType({
    name: \\"NotDeprecatedMessageInput\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            deprecation: \\"testapi.deprecation.NotDeprecatedMessage.body is mark as deprecated in a *.proto file.\\"
        });
        t.field(\\"enum\\", {
            type: nullable(\\"DeprecatedEnum\\"),
            description: \\"\\",
            deprecation: \\"testapi.deprecation.DeprecatedEnum is mark as deprecated in a *.proto file.\\"
        });
        t.field(\\"msg1\\", {
            type: nullable(\\"NotDeprecatedMessageInnerMessage1Input\\"),
            description: \\"\\",
            deprecation: \\"testapi.deprecation.NotDeprecatedMessage.msg1 is mark as deprecated in a *.proto file.\\"
        });
        t.field(\\"msg2\\", {
            type: nullable(\\"NotDeprecatedMessageInnerMessage2Input\\"),
            description: \\"\\"
        });
        t.field(\\"msg3\\", {
            type: nullable(\\"NotDeprecatedMessageInnerMessage1Input\\"),
            description: \\"\\",
            deprecation: \\"testapi.deprecation.NotDeprecatedMessage.msg3 is mark as deprecated in a *.proto file.\\"
        });
        t.field(\\"msg4\\", {
            type: nullable(\\"NotDeprecatedMessageInnerMessage2Input\\"),
            description: \\"\\",
            deprecation: \\"testapi.deprecation.NotDeprecatedMessage.msg4 is mark as deprecated in a *.proto file.\\"
        });
    }
});
export const DeprecatedMessageInnerMessageInput = inputObjectType({
    name: \\"DeprecatedMessageInnerMessageInput\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            deprecation: \\"testapi.deprecation.DeprecatedMessage is mark as deprecated in a *.proto file.\\"
        });
    }
});
export const NotDeprecatedMessageInnerMessage1Input = inputObjectType({
    name: \\"NotDeprecatedMessageInnerMessage1Input\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\"
        });
    }
});
export const NotDeprecatedMessageInnerMessage2Input = inputObjectType({
    name: \\"NotDeprecatedMessageInnerMessage2Input\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\"
        });
    }
});
export const NotDeprecatedEnum = enumType({
    name: \\"NotDeprecatedEnum\\",
    description: \\"\\",
    members: [
        {
            name: \\"NOT_DEPRECATED_ENUM_UNSPECIFIED\\",
            value: 0
        },
        {
            name: \\"NOT_DEPRECATED_FOO\\",
            value: 1
        },
        {
            name: \\"DEPRECATED_BAR\\",
            deprecation: \\"testapi.deprecation.NotDeprecatedEnum.DEPRECATED_BAR is mark as deprecated in a *.proto file.\\",
            value: 2
        }
    ]
});
export const DeprecatedEnum = enumType({
    name: \\"DeprecatedEnum\\",
    description: \\"\\",
    members: [
        {
            name: \\"DEPRECATED_ENUM_UNSPECIFIED\\",
            deprecation: \\"testapi.deprecation.DeprecatedEnum is mark as deprecated in a *.proto file.\\",
            value: 0
        },
        {
            name: \\"DEPRECATED_BAZ\\",
            deprecation: \\"testapi.deprecation.DeprecatedEnum is mark as deprecated in a *.proto file.\\",
            value: 1
        },
        {
            name: \\"DEPRECATED_QUX\\",
            deprecation: \\"testapi.deprecation.DeprecatedEnum is mark as deprecated in a *.proto file.\\",
            value: 2
        }
    ]
});
"
`;

exports[`deprecation generates nexus DSL with native protobuf js_out 2`] = `
"// Code generated by protoc-gen-nexus. DO NOT EDIT.
// source: deprecation/file_deprecation.proto

import { objectType, inputObjectType, enumType, nullable, nonNull } from \\"nexus\\";
import * as _$deprecation$file_deprecation_pb from \\"./deprecation/file_deprecation_pb\\";
export type _$deprecation$file_deprecation_pb$DeprecatedFileMessage = _$deprecation$file_deprecation_pb.DeprecatedFileMessage;
export type _$deprecation$file_deprecation_pb$DeprecatedFileMessageInnerMessage = _$deprecation$file_deprecation_pb.DeprecatedFileMessage.InnerMessage;
export const DeprecatedFileMessage = objectType({
    name: \\"DeprecatedFileMessage\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            deprecation: \\"deprecation/file_deprecation.proto is mark as deprecated.\\",
            resolve(root) { return root.getBody(); }
        });
        t.field(\\"enum\\", {
            type: nullable(\\"DeprecatedFileEnum\\"),
            description: \\"\\",
            deprecation: \\"deprecation/file_deprecation.proto is mark as deprecated.\\",
            resolve(root) { return root.getEnum(); }
        });
    },
    sourceType: { module: __filename, export: \\"_$deprecation$file_deprecation_pb$DeprecatedFileMessage\\" }
});
export const DeprecatedFileMessageInnerMessage = objectType({
    name: \\"DeprecatedFileMessageInnerMessage\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            deprecation: \\"deprecation/file_deprecation.proto is mark as deprecated.\\",
            resolve(root) { return root.getBody(); }
        });
    },
    sourceType: { module: __filename, export: \\"_$deprecation$file_deprecation_pb$DeprecatedFileMessageInnerMessage\\" }
});
export const DeprecatedFileMessageInput = inputObjectType({
    name: \\"DeprecatedFileMessageInput\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            deprecation: \\"deprecation/file_deprecation.proto is mark as deprecated.\\"
        });
        t.field(\\"enum\\", {
            type: nullable(\\"DeprecatedFileEnum\\"),
            description: \\"\\",
            deprecation: \\"deprecation/file_deprecation.proto is mark as deprecated.\\"
        });
    }
});
export const DeprecatedFileMessageInnerMessageInput = inputObjectType({
    name: \\"DeprecatedFileMessageInnerMessageInput\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            deprecation: \\"deprecation/file_deprecation.proto is mark as deprecated.\\"
        });
    }
});
export const DeprecatedFileEnum = enumType({
    name: \\"DeprecatedFileEnum\\",
    description: \\"\\",
    members: [
        {
            name: \\"DEPRECATED_FILE_ENUM_UNSPECIFIED\\",
            deprecation: \\"deprecation/file_deprecation.proto is mark as deprecated.\\",
            value: 0
        },
        {
            name: \\"DEPRECATED_FILE_FOO\\",
            deprecation: \\"deprecation/file_deprecation.proto is mark as deprecated.\\",
            value: 1
        },
        {
            name: \\"DEPRECATED_FILE_BAR\\",
            deprecation: \\"deprecation/file_deprecation.proto is mark as deprecated.\\",
            value: 2
        }
    ]
});
"
`;

exports[`deprecation generates nexus DSL with protobuf.js 1`] = `
"// Code generated by protoc-gen-nexus. DO NOT EDIT.
// source: deprecation/deprecation.proto

import { objectType, inputObjectType, enumType, unionType, nullable, nonNull } from \\"nexus\\";
import * as _$deprecation from \\"./deprecation\\";
export type _$deprecation$testapi$deprecation$DeprecatedMessage = _$deprecation.testapi.deprecation.IDeprecatedMessage;
export type _$deprecation$testapi$deprecation$NotDeprecatedMessage = _$deprecation.testapi.deprecation.INotDeprecatedMessage;
export type _$deprecation$testapi$deprecation$DeprecatedMessageInnerMessage = _$deprecation.testapi.deprecation.DeprecatedMessage.IInnerMessage;
export type _$deprecation$testapi$deprecation$NotDeprecatedMessageInnerMessage1 = _$deprecation.testapi.deprecation.NotDeprecatedMessage.IInnerMessage1;
export type _$deprecation$testapi$deprecation$NotDeprecatedMessageInnerMessage2 = _$deprecation.testapi.deprecation.NotDeprecatedMessage.IInnerMessage2;
export type _$deprecation$testapi$deprecation$NotDeprecatedMessage_not_deprecated_oneof = (_$deprecation.testapi.deprecation.NotDeprecatedMessage.IInnerMessage1 & {
    __protobufTypeName: \\"testapi.deprecation.NotDeprecatedMessage.InnerMessage1\\";
}) | (_$deprecation.testapi.deprecation.NotDeprecatedMessage.IInnerMessage2 & {
    __protobufTypeName: \\"testapi.deprecation.NotDeprecatedMessage.InnerMessage2\\";
});
export type _$deprecation$testapi$deprecation$NotDeprecatedMessage_deprecated_oneof = (_$deprecation.testapi.deprecation.NotDeprecatedMessage.IInnerMessage1 & {
    __protobufTypeName: \\"testapi.deprecation.NotDeprecatedMessage.InnerMessage1\\";
}) | (_$deprecation.testapi.deprecation.NotDeprecatedMessage.IInnerMessage2 & {
    __protobufTypeName: \\"testapi.deprecation.NotDeprecatedMessage.InnerMessage2\\";
});
export const NotDeprecatedMessageNotDeprecatedOneof = unionType({
    name: \\"NotDeprecatedMessageNotDeprecatedOneof\\",
    description: \\"\\",
    definition(t) {
        t.members(\\"NotDeprecatedMessageInnerMessage1\\", \\"NotDeprecatedMessageInnerMessage2\\");
    },
    resolveType(item) {
        if (item.__protobufTypeName === \\"testapi.deprecation.NotDeprecatedMessage.InnerMessage1\\") {
            return \\"NotDeprecatedMessageInnerMessage1\\";
        }
        if (item.__protobufTypeName === \\"testapi.deprecation.NotDeprecatedMessage.InnerMessage2\\") {
            return \\"NotDeprecatedMessageInnerMessage2\\";
        }
        throw \\"unreachable\\";
    },
    sourceType: { module: __filename, export: \\"_$deprecation$testapi$deprecation$NotDeprecatedMessage_not_deprecated_oneof\\" }
});
export const NotDeprecatedMessageDeprecatedOneof = unionType({
    name: \\"NotDeprecatedMessageDeprecatedOneof\\",
    description: \\"\\",
    definition(t) {
        t.members(\\"NotDeprecatedMessageInnerMessage1\\", \\"NotDeprecatedMessageInnerMessage2\\");
    },
    resolveType(item) {
        if (item.__protobufTypeName === \\"testapi.deprecation.NotDeprecatedMessage.InnerMessage1\\") {
            return \\"NotDeprecatedMessageInnerMessage1\\";
        }
        if (item.__protobufTypeName === \\"testapi.deprecation.NotDeprecatedMessage.InnerMessage2\\") {
            return \\"NotDeprecatedMessageInnerMessage2\\";
        }
        throw \\"unreachable\\";
    },
    sourceType: { module: __filename, export: \\"_$deprecation$testapi$deprecation$NotDeprecatedMessage_deprecated_oneof\\" }
});
export const DeprecatedMessage = objectType({
    name: \\"DeprecatedMessage\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            deprecation: \\"testapi.deprecation.DeprecatedMessage is mark as deprecated in a *.proto file.\\",
            resolve(root) { return root.body!; }
        });
        t.field(\\"enum\\", {
            type: nullable(\\"NotDeprecatedEnum\\"),
            description: \\"\\",
            deprecation: \\"testapi.deprecation.DeprecatedMessage is mark as deprecated in a *.proto file.\\",
            resolve(root) { return root.enum ?? null; }
        });
    },
    sourceType: { module: __filename, export: \\"_$deprecation$testapi$deprecation$DeprecatedMessage\\" }
});
export const NotDeprecatedMessage = objectType({
    name: \\"NotDeprecatedMessage\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            deprecation: \\"testapi.deprecation.NotDeprecatedMessage.body is mark as deprecated in a *.proto file.\\",
            resolve(root) { return root.body!; }
        });
        t.field(\\"enum\\", {
            type: nullable(\\"DeprecatedEnum\\"),
            description: \\"\\",
            deprecation: \\"testapi.deprecation.DeprecatedEnum is mark as deprecated in a *.proto file.\\",
            resolve(root) { return root.enum ?? null; }
        });
        t.field(\\"not_deprecated_oneof\\", {
            type: nullable(\\"NotDeprecatedMessageNotDeprecatedOneof\\"),
            description: \\"\\",
            resolve(root) {
                if (root.msg1) {
                    return Object.assign(root.msg1, { __protobufTypeName: (\\"testapi.deprecation.NotDeprecatedMessage.InnerMessage1\\" as const) });
                }
                if (root.msg2) {
                    return Object.assign(root.msg2, { __protobufTypeName: (\\"testapi.deprecation.NotDeprecatedMessage.InnerMessage2\\" as const) });
                }
                return null;
            }
        });
        t.field(\\"deprecated_oneof\\", {
            type: nullable(\\"NotDeprecatedMessageDeprecatedOneof\\"),
            description: \\"\\",
            deprecation: \\"testapi.deprecation.NotDeprecatedMessage.deprecated_oneof is mark as deprecated in a *.proto file.\\",
            resolve(root) {
                if (root.msg3) {
                    return Object.assign(root.msg3, { __protobufTypeName: (\\"testapi.deprecation.NotDeprecatedMessage.InnerMessage1\\" as const) });
                }
                if (root.msg4) {
                    return Object.assign(root.msg4, { __protobufTypeName: (\\"testapi.deprecation.NotDeprecatedMessage.InnerMessage2\\" as const) });
                }
                return null;
            }
        });
    },
    sourceType: { module: __filename, export: \\"_$deprecation$testapi$deprecation$NotDeprecatedMessage\\" }
});
export const DeprecatedMessageInnerMessage = objectType({
    name: \\"DeprecatedMessageInnerMessage\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            deprecation: \\"testapi.deprecation.DeprecatedMessage is mark as deprecated in a *.proto file.\\",
            resolve(root) { return root.body!; }
        });
    },
    sourceType: { module: __filename, export: \\"_$deprecation$testapi$deprecation$DeprecatedMessageInnerMessage\\" }
});
export const NotDeprecatedMessageInnerMessage1 = objectType({
    name: \\"NotDeprecatedMessageInnerMessage1\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            resolve(root) { return root.body!; }
        });
    },
    sourceType: { module: __filename, export: \\"_$deprecation$testapi$deprecation$NotDeprecatedMessageInnerMessage1\\" }
});
export const NotDeprecatedMessageInnerMessage2 = objectType({
    name: \\"NotDeprecatedMessageInnerMessage2\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            resolve(root) { return root.body!; }
        });
    },
    sourceType: { module: __filename, export: \\"_$deprecation$testapi$deprecation$NotDeprecatedMessageInnerMessage2\\" }
});
export const DeprecatedMessageInput = inputObjectType({
    name: \\"DeprecatedMessageInput\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            deprecation: \\"testapi.deprecation.DeprecatedMessage is mark as deprecated in a *.proto file.\\"
        });
        t.field(\\"enum\\", {
            type: nullable(\\"NotDeprecatedEnum\\"),
            description: \\"\\",
            deprecation: \\"testapi.deprecation.DeprecatedMessage is mark as deprecated in a *.proto file.\\"
        });
    }
});
export const NotDeprecatedMessageInput = inputObjectType({
    name: \\"NotDeprecatedMessageInput\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            deprecation: \\"testapi.deprecation.NotDeprecatedMessage.body is mark as deprecated in a *.proto file.\\"
        });
        t.field(\\"enum\\", {
            type: nullable(\\"DeprecatedEnum\\"),
            description: \\"\\",
            deprecation: \\"testapi.deprecation.DeprecatedEnum is mark as deprecated in a *.proto file.\\"
        });
        t.field(\\"msg1\\", {
            type: nullable(\\"NotDeprecatedMessageInnerMessage1Input\\"),
            description: \\"\\",
            deprecation: \\"testapi.deprecation.NotDeprecatedMessage.msg1 is mark as deprecated in a *.proto file.\\"
        });
        t.field(\\"msg2\\", {
            type: nullable(\\"NotDeprecatedMessageInnerMessage2Input\\"),
            description: \\"\\"
        });
        t.field(\\"msg3\\", {
            type: nullable(\\"NotDeprecatedMessageInnerMessage1Input\\"),
            description: \\"\\",
            deprecation: \\"testapi.deprecation.NotDeprecatedMessage.msg3 is mark as deprecated in a *.proto file.\\"
        });
        t.field(\\"msg4\\", {
            type: nullable(\\"NotDeprecatedMessageInnerMessage2Input\\"),
            description: \\"\\",
            deprecation: \\"testapi.deprecation.NotDeprecatedMessage.msg4 is mark as deprecated in a *.proto file.\\"
        });
    }
});
export const DeprecatedMessageInnerMessageInput = inputObjectType({
    name: \\"DeprecatedMessageInnerMessageInput\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            deprecation: \\"testapi.deprecation.DeprecatedMessage is mark as deprecated in a *.proto file.\\"
        });
    }
});
export const NotDeprecatedMessageInnerMessage1Input = inputObjectType({
    name: \\"NotDeprecatedMessageInnerMessage1Input\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\"
        });
    }
});
export const NotDeprecatedMessageInnerMessage2Input = inputObjectType({
    name: \\"NotDeprecatedMessageInnerMessage2Input\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\"
        });
    }
});
export const NotDeprecatedEnum = enumType({
    name: \\"NotDeprecatedEnum\\",
    description: \\"\\",
    members: [
        {
            name: \\"NOT_DEPRECATED_ENUM_UNSPECIFIED\\",
            value: 0
        },
        {
            name: \\"NOT_DEPRECATED_FOO\\",
            value: 1
        },
        {
            name: \\"DEPRECATED_BAR\\",
            deprecation: \\"testapi.deprecation.NotDeprecatedEnum.DEPRECATED_BAR is mark as deprecated in a *.proto file.\\",
            value: 2
        }
    ]
});
export const DeprecatedEnum = enumType({
    name: \\"DeprecatedEnum\\",
    description: \\"\\",
    members: [
        {
            name: \\"DEPRECATED_ENUM_UNSPECIFIED\\",
            deprecation: \\"testapi.deprecation.DeprecatedEnum is mark as deprecated in a *.proto file.\\",
            value: 0
        },
        {
            name: \\"DEPRECATED_BAZ\\",
            deprecation: \\"testapi.deprecation.DeprecatedEnum is mark as deprecated in a *.proto file.\\",
            value: 1
        },
        {
            name: \\"DEPRECATED_QUX\\",
            deprecation: \\"testapi.deprecation.DeprecatedEnum is mark as deprecated in a *.proto file.\\",
            value: 2
        }
    ]
});
"
`;

exports[`deprecation generates nexus DSL with protobuf.js 2`] = `
"// Code generated by protoc-gen-nexus. DO NOT EDIT.
// source: deprecation/file_deprecation.proto

import { objectType, inputObjectType, enumType, nullable, nonNull } from \\"nexus\\";
import * as _$deprecation from \\"./deprecation\\";
export type _$deprecation$testapi$deprecation$DeprecatedFileMessage = _$deprecation.testapi.deprecation.IDeprecatedFileMessage;
export type _$deprecation$testapi$deprecation$DeprecatedFileMessageInnerMessage = _$deprecation.testapi.deprecation.DeprecatedFileMessage.IInnerMessage;
export const DeprecatedFileMessage = objectType({
    name: \\"DeprecatedFileMessage\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            deprecation: \\"deprecation/file_deprecation.proto is mark as deprecated.\\",
            resolve(root) { return root.body!; }
        });
        t.field(\\"enum\\", {
            type: nullable(\\"DeprecatedFileEnum\\"),
            description: \\"\\",
            deprecation: \\"deprecation/file_deprecation.proto is mark as deprecated.\\",
            resolve(root) { return root.enum ?? null; }
        });
    },
    sourceType: { module: __filename, export: \\"_$deprecation$testapi$deprecation$DeprecatedFileMessage\\" }
});
export const DeprecatedFileMessageInnerMessage = objectType({
    name: \\"DeprecatedFileMessageInnerMessage\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            deprecation: \\"deprecation/file_deprecation.proto is mark as deprecated.\\",
            resolve(root) { return root.body!; }
        });
    },
    sourceType: { module: __filename, export: \\"_$deprecation$testapi$deprecation$DeprecatedFileMessageInnerMessage\\" }
});
export const DeprecatedFileMessageInput = inputObjectType({
    name: \\"DeprecatedFileMessageInput\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            deprecation: \\"deprecation/file_deprecation.proto is mark as deprecated.\\"
        });
        t.field(\\"enum\\", {
            type: nullable(\\"DeprecatedFileEnum\\"),
            description: \\"\\",
            deprecation: \\"deprecation/file_deprecation.proto is mark as deprecated.\\"
        });
    }
});
export const DeprecatedFileMessageInnerMessageInput = inputObjectType({
    name: \\"DeprecatedFileMessageInnerMessageInput\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            deprecation: \\"deprecation/file_deprecation.proto is mark as deprecated.\\"
        });
    }
});
export const DeprecatedFileEnum = enumType({
    name: \\"DeprecatedFileEnum\\",
    description: \\"\\",
    members: [
        {
            name: \\"DEPRECATED_FILE_ENUM_UNSPECIFIED\\",
            deprecation: \\"deprecation/file_deprecation.proto is mark as deprecated.\\",
            value: 0
        },
        {
            name: \\"DEPRECATED_FILE_FOO\\",
            deprecation: \\"deprecation/file_deprecation.proto is mark as deprecated.\\",
            value: 1
        },
        {
            name: \\"DEPRECATED_FILE_BAR\\",
            deprecation: \\"deprecation/file_deprecation.proto is mark as deprecated.\\",
            value: 2
        }
    ]
});
"
`;

exports[`field_behavior generates nexus DSL with native protobuf js_out 1`] = `
"// Code generated by protoc-gen-nexus. DO NOT EDIT.
// source: field_behavior/comments.proto

import { objectType, inputObjectType, nullable, nonNull } from \\"nexus\\";
import * as _$field_behavior$comments_pb from \\"./field_behavior/comments_pb\\";
export type _$field_behavior$comments_pb$FieldBehaviorComentsMessage = _$field_behavior$comments_pb.FieldBehaviorComentsMessage;
export type _$field_behavior$comments_pb$FieldBehaviorComentsMessagePost = _$field_behavior$comments_pb.FieldBehaviorComentsMessage.Post;
export const FieldBehaviorComentsMessage = objectType({
    name: \\"FieldBehaviorComentsMessage\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"requiredField\\", {
            type: nonNull(\\"FieldBehaviorComentsMessagePost\\"),
            description: \\"Required.\\",
            resolve(root) { return root.getRequiredField()!; }
        });
        t.field(\\"requiredOutputOnlyField\\", {
            type: nonNull(\\"FieldBehaviorComentsMessagePost\\"),
            description: \\"Required. Output only.\\",
            resolve(root) { return root.getRequiredOutputOnlyField()!; }
        });
        t.field(\\"outputOnlyRequiredField\\", {
            type: nonNull(\\"FieldBehaviorComentsMessagePost\\"),
            description: \\"Output only. Required.\\",
            resolve(root) { return root.getOutputOnlyRequiredField()!; }
        });
        t.field(\\"outputOnlyField\\", {
            type: nullable(\\"FieldBehaviorComentsMessagePost\\"),
            description: \\"Output only.\\",
            resolve(root) { return root.getOutputOnlyField() ?? null; }
        });
    },
    sourceType: { module: __filename, export: \\"_$field_behavior$comments_pb$FieldBehaviorComentsMessage\\" }
});
export const FieldBehaviorComentsMessagePost = objectType({
    name: \\"FieldBehaviorComentsMessagePost\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            resolve(root) { return root.getBody(); }
        });
    },
    sourceType: { module: __filename, export: \\"_$field_behavior$comments_pb$FieldBehaviorComentsMessagePost\\" }
});
export const FieldBehaviorComentsMessageInput = inputObjectType({
    name: \\"FieldBehaviorComentsMessageInput\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"requiredField\\", {
            type: nonNull(\\"FieldBehaviorComentsMessagePostInput\\"),
            description: \\"Required.\\"
        });
        t.field(\\"requiredInputOnlyField\\", {
            type: nonNull(\\"FieldBehaviorComentsMessagePostInput\\"),
            description: \\"Required. Input only.\\"
        });
        t.field(\\"inputOnlyRequiredField\\", {
            type: nonNull(\\"FieldBehaviorComentsMessagePostInput\\"),
            description: \\"Input only. Required.\\"
        });
        t.field(\\"inputOnlyField\\", {
            type: nullable(\\"FieldBehaviorComentsMessagePostInput\\"),
            description: \\"Input only.\\"
        });
    }
});
export const FieldBehaviorComentsMessagePostInput = inputObjectType({
    name: \\"FieldBehaviorComentsMessagePostInput\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\"
        });
    }
});
"
`;

exports[`field_behavior generates nexus DSL with protobuf.js 1`] = `
"// Code generated by protoc-gen-nexus. DO NOT EDIT.
// source: field_behavior/comments.proto

import { objectType, inputObjectType, nullable, nonNull } from \\"nexus\\";
import * as _$field_behavior from \\"./field_behavior\\";
export type _$field_behavior$testapi$deprecation$FieldBehaviorComentsMessage = _$field_behavior.testapi.deprecation.IFieldBehaviorComentsMessage;
export type _$field_behavior$testapi$deprecation$FieldBehaviorComentsMessagePost = _$field_behavior.testapi.deprecation.FieldBehaviorComentsMessage.IPost;
export const FieldBehaviorComentsMessage = objectType({
    name: \\"FieldBehaviorComentsMessage\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"requiredField\\", {
            type: nonNull(\\"FieldBehaviorComentsMessagePost\\"),
            description: \\"Required.\\",
            resolve(root) { return root.requiredField!; }
        });
        t.field(\\"requiredOutputOnlyField\\", {
            type: nonNull(\\"FieldBehaviorComentsMessagePost\\"),
            description: \\"Required. Output only.\\",
            resolve(root) { return root.requiredOutputOnlyField!; }
        });
        t.field(\\"outputOnlyRequiredField\\", {
            type: nonNull(\\"FieldBehaviorComentsMessagePost\\"),
            description: \\"Output only. Required.\\",
            resolve(root) { return root.outputOnlyRequiredField!; }
        });
        t.field(\\"outputOnlyField\\", {
            type: nullable(\\"FieldBehaviorComentsMessagePost\\"),
            description: \\"Output only.\\",
            resolve(root) { return root.outputOnlyField ?? null; }
        });
    },
    sourceType: { module: __filename, export: \\"_$field_behavior$testapi$deprecation$FieldBehaviorComentsMessage\\" }
});
export const FieldBehaviorComentsMessagePost = objectType({
    name: \\"FieldBehaviorComentsMessagePost\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            resolve(root) { return root.body!; }
        });
    },
    sourceType: { module: __filename, export: \\"_$field_behavior$testapi$deprecation$FieldBehaviorComentsMessagePost\\" }
});
export const FieldBehaviorComentsMessageInput = inputObjectType({
    name: \\"FieldBehaviorComentsMessageInput\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"requiredField\\", {
            type: nonNull(\\"FieldBehaviorComentsMessagePostInput\\"),
            description: \\"Required.\\"
        });
        t.field(\\"requiredInputOnlyField\\", {
            type: nonNull(\\"FieldBehaviorComentsMessagePostInput\\"),
            description: \\"Required. Input only.\\"
        });
        t.field(\\"inputOnlyRequiredField\\", {
            type: nonNull(\\"FieldBehaviorComentsMessagePostInput\\"),
            description: \\"Input only. Required.\\"
        });
        t.field(\\"inputOnlyField\\", {
            type: nullable(\\"FieldBehaviorComentsMessagePostInput\\"),
            description: \\"Input only.\\"
        });
    }
});
export const FieldBehaviorComentsMessagePostInput = inputObjectType({
    name: \\"FieldBehaviorComentsMessagePostInput\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\"
        });
    }
});
"
`;

exports[`nested protobuf types generates nexus DSL with native protobuf js_out 1`] = `
"// Code generated by protoc-gen-nexus. DO NOT EDIT.
// source: nested/nested.proto

import { objectType, inputObjectType, enumType, nullable, nonNull } from \\"nexus\\";
import * as _$nested$nested_pb from \\"./nested/nested_pb\\";
export type _$nested$nested_pb$ParentMessage = _$nested$nested_pb.ParentMessage;
export type _$nested$nested_pb$ParentMessageNestedMessage = _$nested$nested_pb.ParentMessage.NestedMessage;
export const ParentMessage = objectType({
    name: \\"ParentMessage\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            resolve(root) { return root.getBody(); }
        });
        t.field(\\"nested\\", {
            type: nullable(\\"ParentMessageNestedMessage\\"),
            description: \\"\\",
            resolve(root) { return root.getNested() ?? null; }
        });
        t.field(\\"nestedEnum\\", {
            type: nullable(\\"ParentMessageNestedEnum\\"),
            description: \\"\\",
            resolve(root) { return root.getNestedEnum(); }
        });
    },
    sourceType: { module: __filename, export: \\"_$nested$nested_pb$ParentMessage\\" }
});
export const ParentMessageNestedMessage = objectType({
    name: \\"ParentMessageNestedMessage\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"nestedBody\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            resolve(root) { return root.getNestedBody(); }
        });
    },
    sourceType: { module: __filename, export: \\"_$nested$nested_pb$ParentMessageNestedMessage\\" }
});
export const ParentMessageInput = inputObjectType({
    name: \\"ParentMessageInput\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\"
        });
        t.field(\\"nested\\", {
            type: nullable(\\"ParentMessageNestedMessageInput\\"),
            description: \\"\\"
        });
        t.field(\\"nestedEnum\\", {
            type: nullable(\\"ParentMessageNestedEnum\\"),
            description: \\"\\"
        });
    }
});
export const ParentMessageNestedMessageInput = inputObjectType({
    name: \\"ParentMessageNestedMessageInput\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"nestedBody\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\"
        });
    }
});
export const ParentMessageNestedEnum = enumType({
    name: \\"ParentMessageNestedEnum\\",
    description: \\"\\",
    members: [
        {
            name: \\"NESTED_ENUM_UNSPECIFIED\\",
            value: 0
        },
        {
            name: \\"FOO\\",
            value: 1
        },
        {
            name: \\"BAR\\",
            value: 2
        }
    ]
});
"
`;

exports[`nested protobuf types generates nexus DSL with protobuf.js 1`] = `
"// Code generated by protoc-gen-nexus. DO NOT EDIT.
// source: nested/nested.proto

import { objectType, inputObjectType, enumType, nullable, nonNull } from \\"nexus\\";
import * as _$nested from \\"./nested\\";
export type _$nested$testapi$nested$ParentMessage = _$nested.testapi.nested.IParentMessage;
export type _$nested$testapi$nested$ParentMessageNestedMessage = _$nested.testapi.nested.ParentMessage.INestedMessage;
export const ParentMessage = objectType({
    name: \\"ParentMessage\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            resolve(root) { return root.body!; }
        });
        t.field(\\"nested\\", {
            type: nullable(\\"ParentMessageNestedMessage\\"),
            description: \\"\\",
            resolve(root) { return root.nested ?? null; }
        });
        t.field(\\"nestedEnum\\", {
            type: nullable(\\"ParentMessageNestedEnum\\"),
            description: \\"\\",
            resolve(root) { return root.nestedEnum ?? null; }
        });
    },
    sourceType: { module: __filename, export: \\"_$nested$testapi$nested$ParentMessage\\" }
});
export const ParentMessageNestedMessage = objectType({
    name: \\"ParentMessageNestedMessage\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"nestedBody\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            resolve(root) { return root.nestedBody!; }
        });
    },
    sourceType: { module: __filename, export: \\"_$nested$testapi$nested$ParentMessageNestedMessage\\" }
});
export const ParentMessageInput = inputObjectType({
    name: \\"ParentMessageInput\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\"
        });
        t.field(\\"nested\\", {
            type: nullable(\\"ParentMessageNestedMessageInput\\"),
            description: \\"\\"
        });
        t.field(\\"nestedEnum\\", {
            type: nullable(\\"ParentMessageNestedEnum\\"),
            description: \\"\\"
        });
    }
});
export const ParentMessageNestedMessageInput = inputObjectType({
    name: \\"ParentMessageNestedMessageInput\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"nestedBody\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\"
        });
    }
});
export const ParentMessageNestedEnum = enumType({
    name: \\"ParentMessageNestedEnum\\",
    description: \\"\\",
    members: [
        {
            name: \\"NESTED_ENUM_UNSPECIFIED\\",
            value: 0
        },
        {
            name: \\"FOO\\",
            value: 1
        },
        {
            name: \\"BAR\\",
            value: 2
        }
    ]
});
"
`;

exports[`protobuf custom options generates nexus DSL with native protobuf js_out 1`] = `
"// Code generated by protoc-gen-nexus. DO NOT EDIT.
// source: extensions/extensions.proto

import { objectType, inputObjectType, enumType, nullable, nonNull } from \\"nexus\\";
import * as _$extensions$extensions_pb from \\"./extensions/extensions_pb\\";
export type _$extensions$extensions_pb$TestPrefixPrefixedMessage = _$extensions$extensions_pb.PrefixedMessage;
export type _$extensions$extensions_pb$TestPrefixPrefixedMessageInnerMessage = _$extensions$extensions_pb.PrefixedMessage.InnerMessage;
export const TestPrefixPrefixedMessage = objectType({
    name: \\"TestPrefixPrefixedMessage\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            resolve(root) { return root.getBody(); }
        });
        t.field(\\"prefixedEnum\\", {
            type: nullable(\\"TestPrefixPrefixedEnum\\"),
            description: \\"\\",
            resolve(root) { return root.getPrefixedEnum(); }
        });
    },
    sourceType: { module: __filename, export: \\"_$extensions$extensions_pb$TestPrefixPrefixedMessage\\" }
});
export const TestPrefixPrefixedMessageInnerMessage = objectType({
    name: \\"TestPrefixPrefixedMessageInnerMessage\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            resolve(root) { return root.getBody(); }
        });
    },
    sourceType: { module: __filename, export: \\"_$extensions$extensions_pb$TestPrefixPrefixedMessageInnerMessage\\" }
});
export const TestPrefixPrefixedMessageInput = inputObjectType({
    name: \\"TestPrefixPrefixedMessageInput\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\"
        });
        t.field(\\"prefixedEnum\\", {
            type: nullable(\\"TestPrefixPrefixedEnum\\"),
            description: \\"\\"
        });
    }
});
export const TestPrefixPrefixedMessageInnerMessageInput = inputObjectType({
    name: \\"TestPrefixPrefixedMessageInnerMessageInput\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\"
        });
    }
});
export const TestPrefixPrefixedEnum = enumType({
    name: \\"TestPrefixPrefixedEnum\\",
    description: \\"\\",
    members: [
        {
            name: \\"PREFIXED_ENUM_UNSPECIFIED\\",
            value: 0
        },
        {
            name: \\"PREFIXED_FOO\\",
            value: 1
        },
        {
            name: \\"PREFIXED_BAR\\",
            value: 2
        }
    ]
});
"
`;

exports[`protobuf custom options generates nexus DSL with protobuf.js 1`] = `
"// Code generated by protoc-gen-nexus. DO NOT EDIT.
// source: extensions/extensions.proto

import { objectType, inputObjectType, enumType, nullable, nonNull } from \\"nexus\\";
import * as _$extensions from \\"./extensions\\";
export type _$extensions$testapi$extensions$TestPrefixPrefixedMessage = _$extensions.testapi.extensions.IPrefixedMessage;
export type _$extensions$testapi$extensions$TestPrefixPrefixedMessageInnerMessage = _$extensions.testapi.extensions.PrefixedMessage.IInnerMessage;
export const TestPrefixPrefixedMessage = objectType({
    name: \\"TestPrefixPrefixedMessage\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            resolve(root) { return root.body!; }
        });
        t.field(\\"prefixedEnum\\", {
            type: nullable(\\"TestPrefixPrefixedEnum\\"),
            description: \\"\\",
            resolve(root) { return root.prefixedEnum ?? null; }
        });
    },
    sourceType: { module: __filename, export: \\"_$extensions$testapi$extensions$TestPrefixPrefixedMessage\\" }
});
export const TestPrefixPrefixedMessageInnerMessage = objectType({
    name: \\"TestPrefixPrefixedMessageInnerMessage\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            resolve(root) { return root.body!; }
        });
    },
    sourceType: { module: __filename, export: \\"_$extensions$testapi$extensions$TestPrefixPrefixedMessageInnerMessage\\" }
});
export const TestPrefixPrefixedMessageInput = inputObjectType({
    name: \\"TestPrefixPrefixedMessageInput\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\"
        });
        t.field(\\"prefixedEnum\\", {
            type: nullable(\\"TestPrefixPrefixedEnum\\"),
            description: \\"\\"
        });
    }
});
export const TestPrefixPrefixedMessageInnerMessageInput = inputObjectType({
    name: \\"TestPrefixPrefixedMessageInnerMessageInput\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\"
        });
    }
});
export const TestPrefixPrefixedEnum = enumType({
    name: \\"TestPrefixPrefixedEnum\\",
    description: \\"\\",
    members: [
        {
            name: \\"PREFIXED_ENUM_UNSPECIFIED\\",
            value: 0
        },
        {
            name: \\"PREFIXED_FOO\\",
            value: 1
        },
        {
            name: \\"PREFIXED_BAR\\",
            value: 2
        }
    ]
});
"
`;

exports[`protobuf enums generates nexus DSL with native protobuf js_out 1`] = `
"// Code generated by protoc-gen-nexus. DO NOT EDIT.
// source: enums/enums.proto

import { objectType, inputObjectType, enumType, nullable } from \\"nexus\\";
import * as _$enums$enums_pb from \\"./enums/enums_pb\\";
export type _$enums$enums_pb$MessageWithEnums = _$enums$enums_pb.MessageWithEnums;
export const MessageWithEnums = objectType({
    name: \\"MessageWithEnums\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"myEnum1\\", {
            type: nullable(\\"MyEnum1\\"),
            description: \\"\\",
            resolve(root) { return root.getMyEnum1(); }
        });
    },
    sourceType: { module: __filename, export: \\"_$enums$enums_pb$MessageWithEnums\\" }
});
export const MessageWithEnumsInput = inputObjectType({
    name: \\"MessageWithEnumsInput\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"myEnum1\\", {
            type: nullable(\\"MyEnum1\\"),
            description: \\"\\"
        });
    }
});
export const MyEnum1 = enumType({
    name: \\"MyEnum1\\",
    description: \\"\\",
    members: [
        {
            name: \\"MY_ENUM_1_UNSPECIRED\\",
            value: 0
        },
        {
            name: \\"FOO\\",
            value: 1
        },
        {
            name: \\"BAR\\",
            description: \\"This is Bar.\\",
            value: 2
        },
        {
            name: \\"BAZ\\",
            value: 3
        }
    ]
});
"
`;

exports[`protobuf enums generates nexus DSL with protobuf.js 1`] = `
"// Code generated by protoc-gen-nexus. DO NOT EDIT.
// source: enums/enums.proto

import { objectType, inputObjectType, enumType, nullable } from \\"nexus\\";
import * as _$enums from \\"./enums\\";
export type _$enums$testapi$nested$MessageWithEnums = _$enums.testapi.nested.IMessageWithEnums;
export const MessageWithEnums = objectType({
    name: \\"MessageWithEnums\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"myEnum1\\", {
            type: nullable(\\"MyEnum1\\"),
            description: \\"\\",
            resolve(root) { return root.myEnum_1 ?? null; }
        });
    },
    sourceType: { module: __filename, export: \\"_$enums$testapi$nested$MessageWithEnums\\" }
});
export const MessageWithEnumsInput = inputObjectType({
    name: \\"MessageWithEnumsInput\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"myEnum1\\", {
            type: nullable(\\"MyEnum1\\"),
            description: \\"\\"
        });
    }
});
export const MyEnum1 = enumType({
    name: \\"MyEnum1\\",
    description: \\"\\",
    members: [
        {
            name: \\"MY_ENUM_1_UNSPECIRED\\",
            value: 0
        },
        {
            name: \\"FOO\\",
            value: 1
        },
        {
            name: \\"BAR\\",
            description: \\"This is Bar.\\",
            value: 2
        },
        {
            name: \\"BAZ\\",
            value: 3
        }
    ]
});
"
`;

exports[`protobuf oneof generates nexus DSL with native protobuf js_out 1`] = `
"// Code generated by protoc-gen-nexus. DO NOT EDIT.
// source: oneof/oneof.proto

import { objectType, inputObjectType, unionType, nullable, nonNull } from \\"nexus\\";
import * as _$oneof$oneof_pb from \\"./oneof/oneof_pb\\";
export type _$oneof$oneof_pb$OneofParent = _$oneof$oneof_pb.OneofParent;
export type _$oneof$oneof_pb$OneofMemberMessage1 = _$oneof$oneof_pb.OneofMemberMessage1;
export type _$oneof$oneof_pb$OneofMemberMessage2 = _$oneof$oneof_pb.OneofMemberMessage2;
export const OneofParentRequiredOneofMembers = unionType({
    name: \\"OneofParentRequiredOneofMembers\\",
    description: \\"Required. disallow not_set.\\",
    definition(t) {
        t.members(\\"OneofMemberMessage1\\", \\"OneofMemberMessage2\\");
    },
    resolveType(item) {
        if (item instanceof _$oneof$oneof_pb.OneofMemberMessage1) {
            return \\"OneofMemberMessage1\\";
        }
        if (item instanceof _$oneof$oneof_pb.OneofMemberMessage2) {
            return \\"OneofMemberMessage2\\";
        }
        throw \\"unreachable\\";
    }
});
export const OneofParentOptionalOneofMembers = unionType({
    name: \\"OneofParentOptionalOneofMembers\\",
    description: \\"\\",
    definition(t) {
        t.members(\\"OneofMemberMessage1\\", \\"OneofMemberMessage2\\");
    },
    resolveType(item) {
        if (item instanceof _$oneof$oneof_pb.OneofMemberMessage1) {
            return \\"OneofMemberMessage1\\";
        }
        if (item instanceof _$oneof$oneof_pb.OneofMemberMessage2) {
            return \\"OneofMemberMessage2\\";
        }
        throw \\"unreachable\\";
    }
});
export const OneofParent = objectType({
    name: \\"OneofParent\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"normalField\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            resolve(root) { return root.getNormalField(); }
        });
        t.field(\\"required_oneof_members\\", {
            type: nonNull(\\"OneofParentRequiredOneofMembers\\"),
            description: \\"Required. disallow not_set.\\",
            resolve(root) {
                switch (root.getRequiredOneofMembersCase()) {
                    case _$oneof$oneof_pb.OneofParent.RequiredOneofMembersCase.REQUIRED_ONEOF_MEMBERS_NOT_SET: {
                        throw \\"unreachable\\";
                    }
                    case _$oneof$oneof_pb.OneofParent.RequiredOneofMembersCase.REQUIRED_MESSAGE1: {
                        return root.getRequiredMessage1()!;
                    }
                    case _$oneof$oneof_pb.OneofParent.RequiredOneofMembersCase.REQUIRED_MESSAGE2: {
                        return root.getRequiredMessage2()!;
                    }
                    default: {
                        throw \\"unreachable\\";
                    }
                }
            }
        });
        t.field(\\"optional_oneof_members\\", {
            type: nullable(\\"OneofParentOptionalOneofMembers\\"),
            description: \\"\\",
            resolve(root) {
                switch (root.getOptionalOneofMembersCase()) {
                    case _$oneof$oneof_pb.OneofParent.OptionalOneofMembersCase.OPTIONAL_ONEOF_MEMBERS_NOT_SET: {
                        return null;
                    }
                    case _$oneof$oneof_pb.OneofParent.OptionalOneofMembersCase.OPTOINAL_MESSAGE1: {
                        return root.getOptoinalMessage1()!;
                    }
                    case _$oneof$oneof_pb.OneofParent.OptionalOneofMembersCase.OPTOINAL_MESSAGE2: {
                        return root.getOptoinalMessage2()!;
                    }
                    default: {
                        throw \\"unreachable\\";
                    }
                }
            }
        });
    },
    sourceType: { module: __filename, export: \\"_$oneof$oneof_pb$OneofParent\\" }
});
export const OneofMemberMessage1 = objectType({
    name: \\"OneofMemberMessage1\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            resolve(root) { return root.getBody(); }
        });
    },
    sourceType: { module: __filename, export: \\"_$oneof$oneof_pb$OneofMemberMessage1\\" }
});
export const OneofMemberMessage2 = objectType({
    name: \\"OneofMemberMessage2\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"imageUrl\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            resolve(root) { return root.getImageUrl(); }
        });
    },
    sourceType: { module: __filename, export: \\"_$oneof$oneof_pb$OneofMemberMessage2\\" }
});
export const OneofParentInput = inputObjectType({
    name: \\"OneofParentInput\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"normalField\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\"
        });
        t.field(\\"requiredMessage1\\", {
            type: nullable(\\"OneofMemberMessage1Input\\"),
            description: \\"\\"
        });
        t.field(\\"requiredMessage2\\", {
            type: nullable(\\"OneofMemberMessage2Input\\"),
            description: \\"\\"
        });
        t.field(\\"optoinalMessage1\\", {
            type: nullable(\\"OneofMemberMessage1Input\\"),
            description: \\"\\"
        });
        t.field(\\"optoinalMessage2\\", {
            type: nullable(\\"OneofMemberMessage2Input\\"),
            description: \\"\\"
        });
    }
});
export const OneofMemberMessage1Input = inputObjectType({
    name: \\"OneofMemberMessage1Input\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\"
        });
    }
});
export const OneofMemberMessage2Input = inputObjectType({
    name: \\"OneofMemberMessage2Input\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"imageUrl\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\"
        });
    }
});
"
`;

exports[`protobuf oneof generates nexus DSL with protobuf.js 1`] = `
"// Code generated by protoc-gen-nexus. DO NOT EDIT.
// source: oneof/oneof.proto

import { objectType, inputObjectType, unionType, nullable, nonNull } from \\"nexus\\";
import * as _$oneof from \\"./oneof\\";
export type _$oneof$testapi$oneof$OneofParent = _$oneof.testapi.oneof.IOneofParent;
export type _$oneof$testapi$oneof$OneofMemberMessage1 = _$oneof.testapi.oneof.IOneofMemberMessage1;
export type _$oneof$testapi$oneof$OneofMemberMessage2 = _$oneof.testapi.oneof.IOneofMemberMessage2;
export type _$oneof$testapi$oneof$OneofParent_required_oneof_members = (_$oneof.testapi.oneof.IOneofMemberMessage1 & {
    __protobufTypeName: \\"testapi.oneof.OneofMemberMessage1\\";
}) | (_$oneof.testapi.oneof.IOneofMemberMessage2 & {
    __protobufTypeName: \\"testapi.oneof.OneofMemberMessage2\\";
});
export type _$oneof$testapi$oneof$OneofParent_optional_oneof_members = (_$oneof.testapi.oneof.IOneofMemberMessage1 & {
    __protobufTypeName: \\"testapi.oneof.OneofMemberMessage1\\";
}) | (_$oneof.testapi.oneof.IOneofMemberMessage2 & {
    __protobufTypeName: \\"testapi.oneof.OneofMemberMessage2\\";
});
export const OneofParentRequiredOneofMembers = unionType({
    name: \\"OneofParentRequiredOneofMembers\\",
    description: \\"Required. disallow not_set.\\",
    definition(t) {
        t.members(\\"OneofMemberMessage1\\", \\"OneofMemberMessage2\\");
    },
    resolveType(item) {
        if (item.__protobufTypeName === \\"testapi.oneof.OneofMemberMessage1\\") {
            return \\"OneofMemberMessage1\\";
        }
        if (item.__protobufTypeName === \\"testapi.oneof.OneofMemberMessage2\\") {
            return \\"OneofMemberMessage2\\";
        }
        throw \\"unreachable\\";
    },
    sourceType: { module: __filename, export: \\"_$oneof$testapi$oneof$OneofParent_required_oneof_members\\" }
});
export const OneofParentOptionalOneofMembers = unionType({
    name: \\"OneofParentOptionalOneofMembers\\",
    description: \\"\\",
    definition(t) {
        t.members(\\"OneofMemberMessage1\\", \\"OneofMemberMessage2\\");
    },
    resolveType(item) {
        if (item.__protobufTypeName === \\"testapi.oneof.OneofMemberMessage1\\") {
            return \\"OneofMemberMessage1\\";
        }
        if (item.__protobufTypeName === \\"testapi.oneof.OneofMemberMessage2\\") {
            return \\"OneofMemberMessage2\\";
        }
        throw \\"unreachable\\";
    },
    sourceType: { module: __filename, export: \\"_$oneof$testapi$oneof$OneofParent_optional_oneof_members\\" }
});
export const OneofParent = objectType({
    name: \\"OneofParent\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"normalField\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            resolve(root) { return root.normalField!; }
        });
        t.field(\\"required_oneof_members\\", {
            type: nonNull(\\"OneofParentRequiredOneofMembers\\"),
            description: \\"Required. disallow not_set.\\",
            resolve(root) {
                if (root.requiredMessage1) {
                    return Object.assign(root.requiredMessage1, { __protobufTypeName: (\\"testapi.oneof.OneofMemberMessage1\\" as const) });
                }
                if (root.requiredMessage2) {
                    return Object.assign(root.requiredMessage2, { __protobufTypeName: (\\"testapi.oneof.OneofMemberMessage2\\" as const) });
                }
                throw \\"unreachable\\";
            }
        });
        t.field(\\"optional_oneof_members\\", {
            type: nullable(\\"OneofParentOptionalOneofMembers\\"),
            description: \\"\\",
            resolve(root) {
                if (root.optoinalMessage1) {
                    return Object.assign(root.optoinalMessage1, { __protobufTypeName: (\\"testapi.oneof.OneofMemberMessage1\\" as const) });
                }
                if (root.optoinalMessage2) {
                    return Object.assign(root.optoinalMessage2, { __protobufTypeName: (\\"testapi.oneof.OneofMemberMessage2\\" as const) });
                }
                return null;
            }
        });
    },
    sourceType: { module: __filename, export: \\"_$oneof$testapi$oneof$OneofParent\\" }
});
export const OneofMemberMessage1 = objectType({
    name: \\"OneofMemberMessage1\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            resolve(root) { return root.body!; }
        });
    },
    sourceType: { module: __filename, export: \\"_$oneof$testapi$oneof$OneofMemberMessage1\\" }
});
export const OneofMemberMessage2 = objectType({
    name: \\"OneofMemberMessage2\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"imageUrl\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            resolve(root) { return root.imageUrl!; }
        });
    },
    sourceType: { module: __filename, export: \\"_$oneof$testapi$oneof$OneofMemberMessage2\\" }
});
export const OneofParentInput = inputObjectType({
    name: \\"OneofParentInput\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"normalField\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\"
        });
        t.field(\\"requiredMessage1\\", {
            type: nullable(\\"OneofMemberMessage1Input\\"),
            description: \\"\\"
        });
        t.field(\\"requiredMessage2\\", {
            type: nullable(\\"OneofMemberMessage2Input\\"),
            description: \\"\\"
        });
        t.field(\\"optoinalMessage1\\", {
            type: nullable(\\"OneofMemberMessage1Input\\"),
            description: \\"\\"
        });
        t.field(\\"optoinalMessage2\\", {
            type: nullable(\\"OneofMemberMessage2Input\\"),
            description: \\"\\"
        });
    }
});
export const OneofMemberMessage1Input = inputObjectType({
    name: \\"OneofMemberMessage1Input\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"body\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\"
        });
    }
});
export const OneofMemberMessage2Input = inputObjectType({
    name: \\"OneofMemberMessage2Input\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"imageUrl\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\"
        });
    }
});
"
`;

exports[`simple proto file generates nexus DSL with native protobuf js_out 1`] = `
"// Code generated by protoc-gen-nexus. DO NOT EDIT.
// source: hello/hello.proto

import { objectType, inputObjectType, list, nullable, nonNull } from \\"nexus\\";
import * as _$hello$hello_pb from \\"./hello/hello_pb\\";
export type _$hello$hello_pb$Hello = _$hello$hello_pb.Hello;
export type _$hello$hello_pb$Primitives = _$hello$hello_pb.Primitives;
export const Hello = objectType({
    name: \\"Hello\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"requiredPrimitives\\", {
            type: nonNull(\\"Primitives\\"),
            description: \\"Required.\\",
            resolve(root) { return root.getRequiredPrimitives()!; }
        });
        t.field(\\"optionalPrimitives\\", {
            type: nullable(\\"Primitives\\"),
            description: \\"Optional.\\",
            resolve(root) { return root.getOptionalPrimitives() ?? null; }
        });
        t.field(\\"requiredPrimitivesList\\", {
            type: list(nonNull(\\"Primitives\\")),
            description: \\"Required.\\",
            resolve(root) { return root.getRequiredPrimitivesListList(); }
        });
        t.field(\\"optionalPrimitivesList\\", {
            type: nullable(\\"Primitives\\"),
            description: \\"Optional.\\",
            resolve(root) { return root.getOptionalPrimitivesList() ?? null; }
        });
    },
    sourceType: { module: __filename, export: \\"_$hello$hello_pb$Hello\\" }
});
export const Primitives = objectType({
    name: \\"Primitives\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"requiredDoubleValue\\", {
            type: nonNull(\\"Float\\"),
            description: \\"\\",
            resolve(root) { return root.getRequiredDoubleValue(); }
        });
        t.field(\\"requiredFloatValue\\", {
            type: nonNull(\\"Float\\"),
            description: \\"\\",
            resolve(root) { return root.getRequiredFloatValue(); }
        });
        t.field(\\"requiredInt32Value\\", {
            type: nonNull(\\"Int\\"),
            description: \\"\\",
            resolve(root) { return root.getRequiredInt32Value(); }
        });
        t.field(\\"requiredInt64Value\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            resolve(root) { return root.getRequiredInt64Value().toString(); }
        });
        t.field(\\"requiredUint32Value\\", {
            type: nonNull(\\"Int\\"),
            description: \\"\\",
            resolve(root) { return root.getRequiredUint32Value(); }
        });
        t.field(\\"requiredUint64Value\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            resolve(root) { return root.getRequiredUint64Value().toString(); }
        });
        t.field(\\"requiredSint32Value\\", {
            type: nonNull(\\"Int\\"),
            description: \\"\\",
            resolve(root) { return root.getRequiredSint32Value(); }
        });
        t.field(\\"requiredSint64Value\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            resolve(root) { return root.getRequiredSint64Value().toString(); }
        });
        t.field(\\"requiredFixed32Value\\", {
            type: nonNull(\\"Int\\"),
            description: \\"\\",
            resolve(root) { return root.getRequiredFixed32Value(); }
        });
        t.field(\\"requiredFixed64Value\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            resolve(root) { return root.getRequiredFixed64Value().toString(); }
        });
        t.field(\\"requiredSfixed32Value\\", {
            type: nonNull(\\"Int\\"),
            description: \\"\\",
            resolve(root) { return root.getRequiredSfixed32Value(); }
        });
        t.field(\\"requiredSfixed64Value\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            resolve(root) { return root.getRequiredSfixed64Value().toString(); }
        });
        t.field(\\"requiredBoolValue\\", {
            type: nonNull(\\"Boolean\\"),
            description: \\"\\",
            resolve(root) { return root.getRequiredBoolValue(); }
        });
        t.field(\\"requiredStringValue\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            resolve(root) { return root.getRequiredStringValue(); }
        });
    },
    sourceType: { module: __filename, export: \\"_$hello$hello_pb$Primitives\\" }
});
export const HelloInput = inputObjectType({
    name: \\"HelloInput\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"requiredPrimitives\\", {
            type: nonNull(\\"PrimitivesInput\\"),
            description: \\"Required.\\"
        });
        t.field(\\"optionalPrimitives\\", {
            type: nullable(\\"PrimitivesInput\\"),
            description: \\"Optional.\\"
        });
        t.field(\\"requiredPrimitivesList\\", {
            type: list(nonNull(\\"PrimitivesInput\\")),
            description: \\"Required.\\"
        });
        t.field(\\"optionalPrimitivesList\\", {
            type: nullable(\\"PrimitivesInput\\"),
            description: \\"Optional.\\"
        });
    }
});
export const PrimitivesInput = inputObjectType({
    name: \\"PrimitivesInput\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"requiredDoubleValue\\", {
            type: nonNull(\\"Float\\"),
            description: \\"\\"
        });
        t.field(\\"requiredFloatValue\\", {
            type: nonNull(\\"Float\\"),
            description: \\"\\"
        });
        t.field(\\"requiredInt32Value\\", {
            type: nonNull(\\"Int\\"),
            description: \\"\\"
        });
        t.field(\\"requiredInt64Value\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\"
        });
        t.field(\\"requiredUint32Value\\", {
            type: nonNull(\\"Int\\"),
            description: \\"\\"
        });
        t.field(\\"requiredUint64Value\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\"
        });
        t.field(\\"requiredSint32Value\\", {
            type: nonNull(\\"Int\\"),
            description: \\"\\"
        });
        t.field(\\"requiredSint64Value\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\"
        });
        t.field(\\"requiredFixed32Value\\", {
            type: nonNull(\\"Int\\"),
            description: \\"\\"
        });
        t.field(\\"requiredFixed64Value\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\"
        });
        t.field(\\"requiredSfixed32Value\\", {
            type: nonNull(\\"Int\\"),
            description: \\"\\"
        });
        t.field(\\"requiredSfixed64Value\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\"
        });
        t.field(\\"requiredBoolValue\\", {
            type: nonNull(\\"Boolean\\"),
            description: \\"\\"
        });
        t.field(\\"requiredStringValue\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\"
        });
    }
});
"
`;

exports[`simple proto file generates nexus DSL with protobuf.js 1`] = `
"// Code generated by protoc-gen-nexus. DO NOT EDIT.
// source: hello/hello.proto

import { objectType, inputObjectType, list, nullable, nonNull } from \\"nexus\\";
import * as _$hello from \\"./hello\\";
export type _$hello$testapi$hello$Hello = _$hello.testapi.hello.IHello;
export type _$hello$testapi$hello$Primitives = _$hello.testapi.hello.IPrimitives;
export const Hello = objectType({
    name: \\"Hello\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"requiredPrimitives\\", {
            type: nonNull(\\"Primitives\\"),
            description: \\"Required.\\",
            resolve(root) { return root.requiredPrimitives!; }
        });
        t.field(\\"optionalPrimitives\\", {
            type: nullable(\\"Primitives\\"),
            description: \\"Optional.\\",
            resolve(root) { return root.optionalPrimitives ?? null; }
        });
        t.field(\\"requiredPrimitivesList\\", {
            type: list(nonNull(\\"Primitives\\")),
            description: \\"Required.\\",
            resolve(root) { return root.requiredPrimitivesList!; }
        });
        t.field(\\"optionalPrimitivesList\\", {
            type: nullable(\\"Primitives\\"),
            description: \\"Optional.\\",
            resolve(root) { return root.optionalPrimitivesList ?? null; }
        });
    },
    sourceType: { module: __filename, export: \\"_$hello$testapi$hello$Hello\\" }
});
export const Primitives = objectType({
    name: \\"Primitives\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"requiredDoubleValue\\", {
            type: nonNull(\\"Float\\"),
            description: \\"\\",
            resolve(root) { return root.requiredDoubleValue!; }
        });
        t.field(\\"requiredFloatValue\\", {
            type: nonNull(\\"Float\\"),
            description: \\"\\",
            resolve(root) { return root.requiredFloatValue!; }
        });
        t.field(\\"requiredInt32Value\\", {
            type: nonNull(\\"Int\\"),
            description: \\"\\",
            resolve(root) { return root.requiredInt32Value!; }
        });
        t.field(\\"requiredInt64Value\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            resolve(root) { return root.requiredInt64Value!.toString(); }
        });
        t.field(\\"requiredUint32Value\\", {
            type: nonNull(\\"Int\\"),
            description: \\"\\",
            resolve(root) { return root.requiredUint32Value!; }
        });
        t.field(\\"requiredUint64Value\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            resolve(root) { return root.requiredUint64Value!.toString(); }
        });
        t.field(\\"requiredSint32Value\\", {
            type: nonNull(\\"Int\\"),
            description: \\"\\",
            resolve(root) { return root.requiredSint32Value!; }
        });
        t.field(\\"requiredSint64Value\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            resolve(root) { return root.requiredSint64Value!.toString(); }
        });
        t.field(\\"requiredFixed32Value\\", {
            type: nonNull(\\"Int\\"),
            description: \\"\\",
            resolve(root) { return root.requiredFixed32Value!; }
        });
        t.field(\\"requiredFixed64Value\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            resolve(root) { return root.requiredFixed64Value!.toString(); }
        });
        t.field(\\"requiredSfixed32Value\\", {
            type: nonNull(\\"Int\\"),
            description: \\"\\",
            resolve(root) { return root.requiredSfixed32Value!; }
        });
        t.field(\\"requiredSfixed64Value\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            resolve(root) { return root.requiredSfixed64Value!.toString(); }
        });
        t.field(\\"requiredBoolValue\\", {
            type: nonNull(\\"Boolean\\"),
            description: \\"\\",
            resolve(root) { return root.requiredBoolValue!; }
        });
        t.field(\\"requiredStringValue\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\",
            resolve(root) { return root.requiredStringValue!; }
        });
    },
    sourceType: { module: __filename, export: \\"_$hello$testapi$hello$Primitives\\" }
});
export const HelloInput = inputObjectType({
    name: \\"HelloInput\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"requiredPrimitives\\", {
            type: nonNull(\\"PrimitivesInput\\"),
            description: \\"Required.\\"
        });
        t.field(\\"optionalPrimitives\\", {
            type: nullable(\\"PrimitivesInput\\"),
            description: \\"Optional.\\"
        });
        t.field(\\"requiredPrimitivesList\\", {
            type: list(nonNull(\\"PrimitivesInput\\")),
            description: \\"Required.\\"
        });
        t.field(\\"optionalPrimitivesList\\", {
            type: nullable(\\"PrimitivesInput\\"),
            description: \\"Optional.\\"
        });
    }
});
export const PrimitivesInput = inputObjectType({
    name: \\"PrimitivesInput\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"requiredDoubleValue\\", {
            type: nonNull(\\"Float\\"),
            description: \\"\\"
        });
        t.field(\\"requiredFloatValue\\", {
            type: nonNull(\\"Float\\"),
            description: \\"\\"
        });
        t.field(\\"requiredInt32Value\\", {
            type: nonNull(\\"Int\\"),
            description: \\"\\"
        });
        t.field(\\"requiredInt64Value\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\"
        });
        t.field(\\"requiredUint32Value\\", {
            type: nonNull(\\"Int\\"),
            description: \\"\\"
        });
        t.field(\\"requiredUint64Value\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\"
        });
        t.field(\\"requiredSint32Value\\", {
            type: nonNull(\\"Int\\"),
            description: \\"\\"
        });
        t.field(\\"requiredSint64Value\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\"
        });
        t.field(\\"requiredFixed32Value\\", {
            type: nonNull(\\"Int\\"),
            description: \\"\\"
        });
        t.field(\\"requiredFixed64Value\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\"
        });
        t.field(\\"requiredSfixed32Value\\", {
            type: nonNull(\\"Int\\"),
            description: \\"\\"
        });
        t.field(\\"requiredSfixed64Value\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\"
        });
        t.field(\\"requiredBoolValue\\", {
            type: nonNull(\\"Boolean\\"),
            description: \\"\\"
        });
        t.field(\\"requiredStringValue\\", {
            type: nonNull(\\"String\\"),
            description: \\"\\"
        });
    }
});
"
`;

exports[`well-known protobuf types generates nexus DSL with native protobuf js_out 1`] = `
"// Code generated by protoc-gen-nexus. DO NOT EDIT.
// source: wktypes/well_known_types.proto

import { objectType, inputObjectType, nullable } from \\"nexus\\";
import * as proto_nexus from \\"proto-nexus\\";
import * as _$wktypes$well_known_types_pb from \\"./wktypes/well_known_types_pb\\";
export type _$wktypes$well_known_types_pb$Message = _$wktypes$well_known_types_pb.Message;
export const Message = objectType({
    name: \\"Message\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"timestamp\\", {
            type: nullable(\\"DateTime\\"),
            description: \\"\\",
            resolve(root) { return proto_nexus.timestampToDate(root.getTimestamp()); }
        });
        t.field(\\"int32Value\\", {
            type: nullable(\\"Int\\"),
            description: \\"\\",
            resolve(root) { return proto_nexus.unwrapInt32Value(root.getInt32Value()); }
        });
        t.field(\\"int64Value\\", {
            type: nullable(\\"String\\"),
            description: \\"\\",
            resolve(root) { return proto_nexus.unwrapInt64Value(root.getInt64Value())?.toString() ?? null; }
        });
        t.field(\\"uint32Value\\", {
            type: nullable(\\"Int\\"),
            description: \\"\\",
            resolve(root) { return proto_nexus.unwrapUInt32Value(root.getUint32Value()); }
        });
        t.field(\\"uint64Value\\", {
            type: nullable(\\"String\\"),
            description: \\"\\",
            resolve(root) { return proto_nexus.unwrapUInt64Value(root.getUint64Value())?.toString() ?? null; }
        });
        t.field(\\"floatValue\\", {
            type: nullable(\\"Float\\"),
            description: \\"\\",
            resolve(root) { return proto_nexus.unwrapFloatValue(root.getFloatValue()); }
        });
        t.field(\\"doubleValue\\", {
            type: nullable(\\"Float\\"),
            description: \\"\\",
            resolve(root) { return proto_nexus.unwrapDoubleValue(root.getDoubleValue()); }
        });
        t.field(\\"boolValue\\", {
            type: nullable(\\"Boolean\\"),
            description: \\"\\",
            resolve(root) { return proto_nexus.unwrapBoolValue(root.getBoolValue()); }
        });
        t.field(\\"stringValue\\", {
            type: nullable(\\"String\\"),
            description: \\"\\",
            resolve(root) { return proto_nexus.unwrapStringValue(root.getStringValue()); }
        });
    },
    sourceType: { module: __filename, export: \\"_$wktypes$well_known_types_pb$Message\\" }
});
export const MessageInput = inputObjectType({
    name: \\"MessageInput\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"timestamp\\", {
            type: nullable(\\"DateTime\\"),
            description: \\"\\"
        });
        t.field(\\"int32Value\\", {
            type: nullable(\\"Int\\"),
            description: \\"\\"
        });
        t.field(\\"int64Value\\", {
            type: nullable(\\"String\\"),
            description: \\"\\"
        });
        t.field(\\"uint32Value\\", {
            type: nullable(\\"Int\\"),
            description: \\"\\"
        });
        t.field(\\"uint64Value\\", {
            type: nullable(\\"String\\"),
            description: \\"\\"
        });
        t.field(\\"floatValue\\", {
            type: nullable(\\"Float\\"),
            description: \\"\\"
        });
        t.field(\\"doubleValue\\", {
            type: nullable(\\"Float\\"),
            description: \\"\\"
        });
        t.field(\\"boolValue\\", {
            type: nullable(\\"Boolean\\"),
            description: \\"\\"
        });
        t.field(\\"stringValue\\", {
            type: nullable(\\"String\\"),
            description: \\"\\"
        });
    }
});
"
`;

exports[`well-known protobuf types generates nexus DSL with protobuf.js 1`] = `
"// Code generated by protoc-gen-nexus. DO NOT EDIT.
// source: wktypes/well_known_types.proto

import { objectType, inputObjectType, nullable } from \\"nexus\\";
import * as $$proto_nexus$protobufjs_adapter from \\"@proto-nexus/protobufjs-adapter\\";
import * as _$wktypes from \\"./wktypes\\";
export type _$wktypes$testapi$wktypes$Message = _$wktypes.testapi.wktypes.IMessage;
export const Message = objectType({
    name: \\"Message\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"timestamp\\", {
            type: nullable(\\"DateTime\\"),
            description: \\"\\",
            resolve(root) { return $$proto_nexus$protobufjs_adapter.timestampToDate(root.timestamp); }
        });
        t.field(\\"int32Value\\", {
            type: nullable(\\"Int\\"),
            description: \\"\\",
            resolve(root) { return $$proto_nexus$protobufjs_adapter.unwrapInt32Value(root.int32Value); }
        });
        t.field(\\"int64Value\\", {
            type: nullable(\\"String\\"),
            description: \\"\\",
            resolve(root) { return $$proto_nexus$protobufjs_adapter.unwrapInt64Value(root.int64Value)?.toString() ?? null; }
        });
        t.field(\\"uint32Value\\", {
            type: nullable(\\"Int\\"),
            description: \\"\\",
            resolve(root) { return $$proto_nexus$protobufjs_adapter.unwrapUInt32Value(root.uint32Value); }
        });
        t.field(\\"uint64Value\\", {
            type: nullable(\\"String\\"),
            description: \\"\\",
            resolve(root) { return $$proto_nexus$protobufjs_adapter.unwrapUInt64Value(root.uint64Value)?.toString() ?? null; }
        });
        t.field(\\"floatValue\\", {
            type: nullable(\\"Float\\"),
            description: \\"\\",
            resolve(root) { return $$proto_nexus$protobufjs_adapter.unwrapFloatValue(root.floatValue); }
        });
        t.field(\\"doubleValue\\", {
            type: nullable(\\"Float\\"),
            description: \\"\\",
            resolve(root) { return $$proto_nexus$protobufjs_adapter.unwrapDoubleValue(root.doubleValue); }
        });
        t.field(\\"boolValue\\", {
            type: nullable(\\"Boolean\\"),
            description: \\"\\",
            resolve(root) { return $$proto_nexus$protobufjs_adapter.unwrapBoolValue(root.boolValue); }
        });
        t.field(\\"stringValue\\", {
            type: nullable(\\"String\\"),
            description: \\"\\",
            resolve(root) { return $$proto_nexus$protobufjs_adapter.unwrapStringValue(root.stringValue); }
        });
    },
    sourceType: { module: __filename, export: \\"_$wktypes$testapi$wktypes$Message\\" }
});
export const MessageInput = inputObjectType({
    name: \\"MessageInput\\",
    description: \\"\\",
    definition(t) {
        t.field(\\"timestamp\\", {
            type: nullable(\\"DateTime\\"),
            description: \\"\\"
        });
        t.field(\\"int32Value\\", {
            type: nullable(\\"Int\\"),
            description: \\"\\"
        });
        t.field(\\"int64Value\\", {
            type: nullable(\\"String\\"),
            description: \\"\\"
        });
        t.field(\\"uint32Value\\", {
            type: nullable(\\"Int\\"),
            description: \\"\\"
        });
        t.field(\\"uint64Value\\", {
            type: nullable(\\"String\\"),
            description: \\"\\"
        });
        t.field(\\"floatValue\\", {
            type: nullable(\\"Float\\"),
            description: \\"\\"
        });
        t.field(\\"doubleValue\\", {
            type: nullable(\\"Float\\"),
            description: \\"\\"
        });
        t.field(\\"boolValue\\", {
            type: nullable(\\"Boolean\\"),
            description: \\"\\"
        });
        t.field(\\"stringValue\\", {
            type: nullable(\\"String\\"),
            description: \\"\\"
        });
    }
});
"
`;
